prevent name wrapping to new line

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body {
   text-align: center;
   grid-column: 2;
   justify-self: center;
+  white-space: nowrap;
 }
 
 .intro img {
@@ -116,10 +117,6 @@ body {
 
 /* For thinner device */
 @media (max-width: 197px) {
-  .intro h1 {
-    font-size: 4.5vw;
-  }
-
   .social a {
     font-size: 2.5vw;
   }
